--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
+      <br>
+      <% flash.each do |msg_type, msg| %>
+        <div class="alert alert-<%= msg_type %>"><%= msg %></div>
+      <% end -%>
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
