--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -25,3 +25,38 @@
   margin: 0;
   padding: 0;
 }
+
+/* error pages */
+
+*{
+  transition: all 0.6s;
+}
+
+html {
+  height: 100%;
+}
+
+body{
+  font-family: 'Lato', sans-serif;
+  color: #888;
+  margin: 0;
+}
+
+#main{
+  display: table;
+  width: 100%;
+  height: 50vh;
+  text-align: center;
+}
+
+.fof{
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.fof h1{
+  font-size: 50px;
+  display: inline-block;
+  padding-right: 12px;
+  animation: type .5s alternate infinite;
+}
