--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,14 @@
 
       <div class="header-top-account">
         <div class="account-header-wrapper mn-login"> 
-          <img src="https://www.cgv.vn/skin/frontend/cgv/default/images/bg-cgv/icon_login25.png"><%= link_to "Đăng nhập/ Đăng ký", new_user_path %>
+          <img src="https://www.cgv.vn/skin/frontend/cgv/default/images/bg-cgv/icon_login25.png">
+          <% if !logged_in? %>
+            <%= link_to "Đăng nhập/ Đăng ký", signup_path %>
+          <% else %>
+            <%= link_to "Profile", current_user %>
+            <span style="border-left: 1px solid black;margin-right: 3px;"></span>
+            <%= link_to "Đăng xuất", logout_path, method: :delete %>
+          <% end -%>            
         </div>
       </div>
     </div> 
@@ -63,7 +70,6 @@
           <li>
             <a href="#">Cultureplex</a>
           </li>
-
         </ol>
       </nav>
     </div> 
