--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,12 @@
-<h1 style="text-align: center;">Sign Up</h1>
+<% provide(:title, 'Đăng ký') %>
+
+<h2 id="form-login-signup-nav">
+  <span id="form-login-content">
+    <%= link_to 'Đăng nhập', login_path, class:"btn-redirect" %>
+  </span>
+  <span id="form-signup-content" class="active">đăng ký</span>
+</h2>
+<br>
 <div class="col-md-6 col-md-offset-3">
   <%= form_with(model: @user) do |form| %>
     <div class="mb-3 form-group">
