--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -189,3 +189,23 @@
   display: inline;
   margin-bottom: 7px;
 }
+
+#favorite_cinema, #city, #user_favorite_cinema, #user_city{
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 5px 8px;
+  font-size: 14px;
+  color: #555555;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.avatar {
+  background: transparent none repeat scroll 0 0;
+  border: 2px solid #676565;
+  border-radius: 80px;
+  height: 150px;
+  width: 150px;
+}
