No 9: Movies management

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,7 +59,7 @@
       <nav id="nav">
         <ol class="nav-primary">
           <li>
-            <a href="#">Phim</a>
+            <%= link_to "Phim", movie_demo_path %>
           </li>
           <li>
             <a href="#">Rạp CGV</a>
