--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,11 @@
         <div class="format-profile-cgv row">
           <div class="my-profile-cgv col-sm-4">
             <div class="image-profile-cgv">
-              <%= image_tag current_user.avatar, class:"avatar" if current_user.avatar.attached? %>
+              <% if current_user.avatar.attached? %>
+                <%= image_tag current_user.avatar, class:"avatar" %>
+              <% else %>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Profile_avatar_placeholder_large.png" class="avatar">
+              <% end -%>
             </div>
           </div>
           <div class="welcome-msg col-sm-8">
