No 10: Movies list

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -137,6 +137,12 @@ a:hover {
   background: gray;
 }
 
+.pagy-bootstrap-nav {
+  display: block;
+  clear: left;
+  margin: 0 auto 0 35%;
+}
+
 /* page header */
 
 header{
