--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,1 +1,1 @@
-<img src="<%= @movie.image_link %>" class="movie_poster img-thumbnail" >
+<h1 style="color: black;text-align: center;">More details for <%= @movie.title%></h1>
