--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -1,4 +1,112 @@
-.movie_poster {
-  width: 300px;
-  margin-right: 20px;
+.movie-poster {
+  width: 185px;
+  height: 277px;
+}
+
+.movie-lists {
+  text-align: left;
+  margin: 0 44px;
+  width: 197px;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.movie-image {
+  max-width: 100%;
+  height: 277px;
+  border: 6px solid #000000;
+  display: inline-table;
+  border-radius: 7px;
+}
+
+.movie-info {
+  max-height: none;
+  height: 137px;
+  min-height: 52px;
+  width: 100%;
+  padding-bottom: 95px;
+  color: #333;
+}
+
+.movie-name {
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  font-size: 14px;
+  font-family: Verdana, Arial, sans-serif;
+  font-weight: bold;
+}
+
+.search-bar {
+  margin: 30px 20%;
+  max-width: 1100px;
+  border-radius: 4px;
+  height: 40px;
+  background-color: white;
+  border: 1px solid #e6e6e6;
+}
+
+.btn-search img {
+  width: 15px;
+}
+
+.btn-search {
+  background-color: #ccc !important;
+  border-radius: 0 4px 4px 0;
+  width: 20%;
+  height: 40px;
+  float: right;
+  background-image: url('https://cdn0.iconfinder.com/data/icons/very-basic-2-android-l-lollipop-icon-pack/24/search-512.png');
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: 10px 50%;
+  font-size: 17px;
+  padding-right: 0;
+}
+
+.search-field {
+  height: 40px;
+  border-style: none;
+  border-radius: 4px 0 0 4px;
+  width: 65%;
+  padding-left: 10px;
+  float: left;
+}
+
+#movie-genre-field {
+  display: none;
+}
+
+.filter-bar {
+  width: 100%;
+  background: #afc1c1;
+  font-weight: 600;
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-transform: uppercase;
+  margin: 20px 0;
+  font-size: 16px;
+  color: #000000;
+}
+
+.sort_link {
+  float: right;
+  border-radius: 3px;
+  color: #636363;
+  text-decoration: none;  
+  margin: 0 10px;
+}
+
+#search_select {
+  width: 15%;
+  height: 40px;
+  border-style: none;
+  float: left;
+  font-size: 15px;
+  text-align: center;
+  font-family: Verdana, Arial, sans-serif;
+}
+
+#search_select * {
+  width: 15%;
+  height: 90px;
 }
