No 14: Seat - time order save

--- a/app/assets/stylesheets/booking_tickets.scss
+++ b/app/assets/stylesheets/booking_tickets.scss
@@ -42,9 +42,13 @@
 }
 
 .poster {
-      float: left;
-      height: 370px;
-      img {
-        width: 250px;
-      }
-    }
+  float: left;
+  height: 370px;
+  img {
+    width: 250px;
+  }
+}
+
+#new-ticket {
+  margin-top: 30px;
+}
