--- a/app/assets/stylesheets/booking_tickets.scss
+++ b/app/assets/stylesheets/booking_tickets.scss
@@ -49,6 +49,41 @@
   }
 }
 
-#new-ticket {
-  margin-top: 30px;
+.food-list {
+  color: #222;
+  h2 {
+    height: 30px;
+    border-bottom: 1px solid #222;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+  }
+  .food-item {
+    width:200px;
+    border: 1px solid #222;
+    margin: 0 5px;
+    display: inline-block;
+    height: 400px;
+    img {
+      clear: both;
+      width: 100%;
+    }
+    .lower-area {
+      height: 40%;
+      clear: both;
+      span {
+        font-size: 25px;
+        line-height: 29px;
+        font-weight: 600;
+      }
+      .quan-change {
+        input {
+          width: 50%;
+          font-size: 25px;
+        }
+        .btn {
+          width: 25%;
+        }
+      }
+    }
+  }
 }
