--- a/app/views/screens/show.html.erb
+++ b/app/views/screens/show.html.erb
@@ -1,7 +1,7 @@
 <body onload="onLoaderFunc()">
   <div class="inputForm">
       <center>
-        <span id="seat-num-label">Nhap so ghe: </span><input type="number" id="Numseats" required>
+        <span id="seat-num-label">Nhap so ghe: </span><input type="number" id="Numseats" min="1" required>
         <button onclick="takeData()" class="btn btn-confirm">OK</button>
       </center>
     </div>
